--- a/RoboParrotSimulator/RoboParrot/public/index.html
+++ b/RoboParrotSimulator/RoboParrot/public/index.html
@@ -4,6 +4,7 @@
     <script src="../build/react.js"></script>
     <script src="../build/JSXTransformer.js"></script>
 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+	<script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
 <body>
 	<div class="container">
