added wings for the parrot

--- a/RoboParrotSimulator/RoboParrot/public/index.html
+++ b/RoboParrotSimulator/RoboParrot/public/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
 <head>
+<title>
+    Simulator of robot parrot
+</title>
 	<link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-1.23.1.css">
     <script src="../build/react.js"></script>
     <script src="../build/JSXTransformer.js"></script>
 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-	<script src="https://d3js.org/d3.v4.min.js"></script>
+	<script src="../build/d3.v3.min.js"></script>
 </head>
 <body>
 	<div class="container">
