added jquery locally

--- a/RoboParrotSimulator/RoboParrot/public/index.html
+++ b/RoboParrotSimulator/RoboParrot/public/index.html
@@ -3,10 +3,9 @@
 <title>
     Simulator of robot parrot
 </title>
-	<link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-1.23.1.css">
     <script src="../build/react.js"></script>
     <script src="../build/JSXTransformer.js"></script>
-	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+	<script src="../build/jquery-1.10.2.js"></script>
 	<script src="../build/d3.v3.min.js"></script>
 </head>
 <body>
