put parrot into a separate file

--- a/RoboParrotSimulator/RoboParrot/public/index.html
+++ b/RoboParrotSimulator/RoboParrot/public/index.html
@@ -7,6 +7,7 @@
     <script src="../build/JSXTransformer.js"></script>
 	<script src="../build/jquery-1.10.2.js"></script>
 	<script src="../build/d3.v3.min.js"></script>
+	<script src="parrot.js"></script>
 </head>
 <body>
 	<div class="container">
