--- a/RoboParrotSimulator/RoboParrot/public/index.html
+++ b/RoboParrotSimulator/RoboParrot/public/index.html
@@ -8,6 +8,12 @@
 	<script src="../build/jquery-1.10.2.js"></script>
 	<script src="../build/d3.v3.min.js"></script>
 	<script src="parrot.js"></script>
+	<style>
+	body {
+		background-image: url("images/table1.png");
+		background-repeat: no-repeat;
+	}
+	</style>
 </head>
 <body>
 	<div class="container">
