added turnLeft() and turnRight() to 3d view

--- a/RoboParrotSimulator/RoboParrot/public/index.html
+++ b/RoboParrotSimulator/RoboParrot/public/index.html
@@ -42,11 +42,11 @@
     <li><a href="#tab-3d">3d simulation</a></li>
   </ul>
     <div id="tab-2d">
-    <p>Two dimensional simulation</p>
+    <p>Two dimensional simulation. Used for testing simple actions</p>
 	<div id="2dsimulation"></div>
   </div>
   <div id="tab-3d">
-    <p>Three dimensional simulation</p>
+    <p>Three dimensional simulation. Used to test robot in general</p>
 	<div id="3dsimulation"></div>
   </div>
 	<script type="text/jsx" src="input.js"></script>
