--- a/RoboParrotSimulator/RoboParrot/public/index.html
+++ b/RoboParrotSimulator/RoboParrot/public/index.html
@@ -2,13 +2,13 @@
 <head>
 <title>
     Simulator of robot parrot
-</title>
+</title> 
     <script src="../build/react.js"></script>
     <script src="../build/JSXTransformer.js"></script>
 	<script src="../build/jquery-1.10.2.js"></script>
 	<script src="../build/d3.v3.min.js"></script>
 	<script src="../build/jquery-ui-1.12.0.js"></script>
-	<script src="../build/three.min.js"></script> <!-- load only on demand -->
+	<script src="../build/three.js"></script> <!-- load only on demand -->
 	<script src="parrot.js"></script>
 	<script src="parrot3d.js"></script>
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
