added unit tests

--- a/RoboParrotSimulator/RoboParrot/public/index.html
+++ b/RoboParrotSimulator/RoboParrot/public/index.html
@@ -9,6 +9,7 @@
 	<script src="../build/d3.v3.min.js"></script>
 	<script src="../build/jquery-ui-1.12.0.js"></script>
 	<script src="../build/three.js"></script> <!-- load only on demand -->
+    <script src="../build/MathLib.js"></script>
 	<script src="parrot.js"></script>
 	<script src="parrot3d.js"></script>
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
