--- a/RoboParrotSimulator/RoboParrot/src/html/index.html
+++ b/RoboParrotSimulator/RoboParrot/src/html/index.html
@@ -14,6 +14,7 @@
 	<script src="parrot3d.js"></script>
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
     <link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/robotbirds.css" rel="stylesheet">
 	<style>
 	#tab-2d {
 		background-image: url("images/table1.png");
