--- a/RoboParrotSimulator/RoboParrot/src/html/index.html
+++ b/RoboParrotSimulator/RoboParrot/src/html/index.html
@@ -10,6 +10,7 @@
 	<script src="../build/jquery-1.10.2.js"></script>
 	<script src="../build/jquery-ui-1.12.0.js"></script>
 	<script src="../build/three.js"></script> <!-- load only on demand -->
+	<script type="text/jsx" src="commandspanel.js"></script>
     <script src="../MathLib.js"></script>
 	<script src="parrot.js"></script>
 	<script src="parrot3d.js"></script>
